--- a/index.html
+++ b/index.html
@@ -13,5 +13,12 @@
         <img src="https://cdn-icons-png.flaticon.com/128/2664/2664593.png" alt="sun" id="sun"> <br>
 
     </div>
+    <div class="btn-container" id="btn-container">
+
+        <button type="button" class="btn" id="summer" onclick="summer()">Summer</button>
+        <button type="button" class="btn" id="winter" onclick="winter()">Winter</button>
+        <button type="button" class="btn" id="mansoon" onclick="mansoon()">Mansoon</button>
+
+    </div>
 </body>
 </html>
