--- a/index.html
+++ b/index.html
@@ -20,5 +20,16 @@
         <button type="button" class="btn" id="mansoon" onclick="mansoon()">Mansoon</button>
 
     </div>
+    <script>
+
+        function winter() {
+            const imgElement = document.getElementById('sun');
+            const headerElement = document.getElementById('header');
+            const containerElement = document.getElementById('container')
+            imgElement.src = "https://cdn-icons-png.flaticon.com/128/619/619345.png";
+            headerElement.innerText = 'Winter'
+            containerElement.style.backgroundColor = ' #ffb3b3';
+        }
+      </script>
 </body>
 </html>
