--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
             headerElement.innerText = 'Winter'
             containerElement.style.backgroundColor = ' #ffb3b3';
         }
+        function mansoon() 
+        {
+            const imgElement = document.getElementById('sun');
+            const headerElement = document.getElementById('header');
+            const containerElement = document.getElementById('container')
+            imgElement.src = "https://cdn-icons-png.flaticon.com/128/5264/5264783.png";
+            headerElement.innerText = 'Mansoon'
+            containerElement.style.backgroundColor = ' #b3f0ff';
+            }
+
+        function summer() {
+            const imgElement = document.getElementById('sun');
+            const headerElement = document.getElementById('header');
+            const containerElement = document.getElementById('container')
+            imgElement.src = "https://cdn-icons-png.flaticon.com/128/2664/2664593.png";
+             headerElement.innerText = 'Summer'
+             containerElement.style.backgroundColor = ' #d9b3ff';
+        }
       </script>
 </body>
 </html>
